# tiralabra

./: README.md
dokumentit/: käyttöohje  määrittelydokumentti  testausdokumentti
dokumentit/viikkoraportointi/: viikko1  viikko2  viikko3
tiranreitit/: pyproject.toml
tiranreitit/src/: index.py  routes.py
