[tool.poetry]
name = "\"tiralabra\""
version = "0.1.0"
description = "\"\""
authors = ["Nora Elisa <nora.heikkila@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pylint = "^2.15.5"
cowsay = "^5.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"
pytest = "^7.2.0"
coverage = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
